--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -8,7 +8,7 @@
     "mecompanies":"شركاتي",
     "articlesTitle":"مقالاتي",
     "sigleArticle":"المقالة",
-    "contactTitle":"تواصل معي",
+    "contactTitle":"تواصل معنا",
     "name":"الاسم الكامل",
     "message":"الرسالة",
     "subject":"الموضوع",
